--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-player": "^3.4.0",
+    "react-youtube": "^10.1.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-youtube": "^7.6.2",
     "babel-jest": "^30.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
