--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,13 +4,13 @@
       "nixPkgs": ["nodejs-18_x"]
     },
     "install": {
-      "cmds": ["cd server && npm ci"]
+      "cmds": ["npm ci"]
     },
     "build": {
       "cmds": ["echo 'Build complete'"]
     },
     "start": {
-      "cmd": "cd server && npm start"
+      "cmd": "npm start"
     }
   }
 }
