--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs"]
 
 [phases.install]
-cmds = ["cd server && npm ci"]
+cmds = ["cd server && npm install"]
 
 [phases.build]
 cmds = []
 
 [start]
-cmd = "cd server && npm start"
+cmd = "cd server && node index.js"
