Fix nixpacks.toml syntax for Railway
- Change [start] to [phases.start] (correct Railway format)
- Use proper TOML array formatting for cmds
- Use npm install instead of npm ci
- Direct node index.js execution from server directory

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,9 @@
 nixPkgs = ["nodejs"]
 
 [phases.install]
-cmds = ["cd server && npm install"]
+cmds = [
+  "cd server && npm install"
+]
 
-[phases.build]
-cmds = []
-
-[start]
+[phases.start]
 cmd = "cd server && node index.js"
