--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
     "jest": "^29.7.0",
+    "prisma": "^5.22.0",
     "socket.io-client": "^4.8.1"
   },
   "jest": {
