--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "gsap": "^3.14.1",
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-player": "^3.4.0",
     "react-youtube": "^10.1.0",
-    "socket.io-client": "^4.8.1"
+    "simplex-noise": "^4.0.3",
+    "socket.io-client": "^4.8.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
