--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-youtube": "^7.6.2",
+    "@types/three": "^0.182.0",
     "babel-jest": "^30.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
