--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs"]
 
 [phases.install]
-cmds = [
-  "cd server && npm install",
-  "cd server && npx prisma generate"
-]
+cmds = ["cd server && npm install"]
+
+[phases.build]
+cmds = ["cd server && npm run build"]
 
 [start]
-cmd = "cd server && npx prisma migrate deploy && node index.js"
+cmd = "cd server && npm start"
