--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "manual-test": "node tests/manual-test.js",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "build": "prisma generate",
+    "start": "prisma migrate deploy && node index.js"
   },
   "keywords": [],
   "author": "",
